Update `SwiftlyChordUtilities` package

--- a/Chords Database/Info.plist
+++ b/Chords Database/Info.plist
@@ -10,10 +10,10 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>LSHandlerRank</key>
-			<string>Default</string>
+			<string>Owner</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>nl.desbeers.cdb</string>
+				<string>nl.desbeers.chordsdb</string>
 			</array>
 			<key>NSUbiquitousDocumentUserActivityType</key>
 			<string>$(PRODUCT_BUNDLE_IDENTIFIER).example-document</string>
@@ -31,12 +31,12 @@
 			<key>UTTypeIcons</key>
 			<dict/>
 			<key>UTTypeIdentifier</key>
-			<string>nl.desbeers.cdb</string>
+			<string>nl.desbeers.chordsdb</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
-					<string>cdb</string>
+					<string>chordsdb</string>
 				</array>
 			</dict>
 		</dict>
